# reprored

./: .clang-format  CITATION.cff  CMakeLists.txt  README.md
contrib/: argument_list_generator.py  opcounter.py  scorep_compiler.sh
include/: MAryTree.hpp  allreduce_summation.hpp  binary_tree.hpp  binary_tree_summation.h  binary_tree_summation.hpp  dual_tree_summation.hpp  dual_tree_topology.hpp  k_chunked_array.hpp  kgather_summation.hpp  message_buffer.hpp  reproblas_summation.hpp  summation.hpp  util.hpp
libs/reproblas/: CMakeLists.txt  reproblas-deprecated-imp.patch
src/: allreduce_summation.cpp  benchmark.cpp  binary_tree.cpp  binary_tree.hpp  binary_tree_summation.cpp  binarytreesummation.cpp  binarytreesummation.h  c_wrapper.cpp  c_wrapper_allreduce.cpp  c_wrapper_reproblas.cpp  dual_tree_calculator.cpp  dual_tree_summation.cpp  io.cpp  io.hpp  k_chunked_array.cpp  kgather_summation.cpp  main.cpp  message_buffer.cpp  reproblas_summation.cpp  summation.cpp  util.cpp
test/: chunked_array_test.cpp  dual_tree_test.cpp  m_ary_tree.cpp  main.cpp  reproducibility_test.cpp
